[package]
name = "gameditor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gameditor"
path = "src/main.rs"

[[bin]]
name = "test-target"
path = "src/bin/test_target.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }
